# GameOfLife2

cellautomata/: .gitignore  CMakeLists.txt  CellAutomaton.cc  CellAutomaton.h  Grid.h  LifeLikeRule.cc  LifeLikeRule.h  RLEParser.cc  RLEParser.h  WrappingGrid.h  WrappingGrid.tcc  main.cpp  test.cpp
patterns/: 8bkbk14.rle  blinker.rle
